--- a/index.html
+++ b/index.html
@@ -70,22 +70,128 @@
     </div>
     <div class="main-div4">
       <div class="sub-div3"><img class="img2" src="./images/2.webp" alt="" height="50px">
-        <div class="sub-div2">Skilledscore empowered me to evolve fron an employee to a confident
-          manager,readdy for success
+        <div>
+          <div class="sub-div2">Skilledscore empowered me to evolve fron an employee to a confident
+            manager,readdy for success
+          </div>
+          <p class="paragraph4">sara promoted to manager</p>
         </div>
       </div>
       <div class="sub-div4"><img class="img2" src="./images/img3.webp" alt="" height="50px">
-        <div class="sub-div2">skilledscore pay a povital role in helping me secure
-          my dream job,turning in to reality
+        <div>
+          <div class="sub-div2">skilledscore pay a povital role in helping me secure
+            my dream job,turning in to reality
+          </div>
+          <p class="paragraph4">amna got her new job</p>
         </div>
       </div>
       <div class="sub-div5"><img class="img2" src="./images/img4.webp" alt="" height="50px">
-        <div class="sub-div2">skilledscore pay a povital role in helping me secure
-          my dream job,turning in to reality
+        <div>
+          <div class="sub-div2">skilledscore pay a povital role in helping me secure
+            my dream job,turning in to reality
+          </div>
+          <p class="paragraph4">bilal got his dream job</p>
         </div>
       </div>
     </div>
+    <h1 class="heading1">how skilledscore help for your career counseling</h1>
+    <div class="hover-link">
+      <p class="paragraph5">Get assessment score</p>
+      <p class="paragraph5">up skills</p>
+      <p class="paragraph5">career conselling</p>
+      <p class="paragraph5">job recomendetion</p>
+    </div>
+    <div class="main-div6">
+      <div>
+        <p class="paragraph6">up skills</p>
+        <h1 class="heading2">Embark on a </h1>
+        <h1 class="heading2"> transitional journey-</h1>
+        <h1 class="heading2"> eveliate your experties</h1>
+        <p>With skilledscore,advance your skills,dive into limitness world</p>
+        <p>of continious growth and improvement in your choosen feild,</p>
+        <p>empowering you to to become the best version of your self</p>
+      </div>
+      <img class="img5" src="./images/img5.webp" alt="">
+    </div>
+    <div class="main-div7">
+      <h1 class="heading3">Benefit of joining skilledscore</h1>
+      <p class="paragraph7">A smarter way to find right skills and jobs</p>
+      <div class="main-div8">
+        <div class="sub-div8"><img class="img6" src="./images/img6.webp" alt="">
+          <p class="paragraph8">3x increase in your career</p>
+          <p class="paragraph9">eveliate your career to new heightwith upskiling through</p>
+          <p class="paragraph10">skillescore</p>
+        </div>
+        <div class="sub-div9"><img class="img7" src="./images/img7.webp" alt="">
+          <p class="paragraph8">100% job satisfaction</p>
+          <p class="paragraph9">experiance un paralleld job satisfaction as your </p>
+          <p class="paragraph10">aspirations goal and qualification align perfectly with your career</p>
+        </div>
+      </div>
+    </div>
+    <div class="main-div9">
+      <h1 class="heading4">How to use skilledscore</h1>
+      <p class="paragraph11">a smarter way to find right skills</p>
+      <div class="sub-div10">
+        <div>
+          <img class="img9" src="./images/download.png1.png" alt="">
+          <h3 class="paragraph12">create you profile and get your</h3>
+          <h3 class="paragraph12">score</h3>
+          <p class="paragraph12">unlock your potential</p>
+          <p class="paragraph12">by transforming your dream into reality,one</p>
+          <p class="paragraph12">job at a time</p>
+        </div>
+        <img class="img8" src="./images/aerow1.png" alt="">
+        <div>
+          <img class="img9" src="./images/download.png2.png" alt="">
+          <h3 class="paragraph12">improve and share your skilledscore</h3>
+          <p class="paragraph12">evelate your skill scoreand achive your</p>
+          <p class="paragraph12">dream job whith skilledscore: where</p>
+          <p class="paragraph12">aspiration meets oppourtunity</p>
+        </div>
+        <img class="img8" src="./images/aerow2.png" alt="">
+        <div>
+          <img class="img9" src="./images/download.png3.png" alt="">
+          <h3 class="paragraph12">applying for sugested job</h3>
+          <p class="paragraph12">unlock your dream career by seamlessly</p>
+          <p class="paragraph12">applying for suggested job with</p>
+          <p class="paragraph12">skilled score - your part to professtional</p>
+          <p class="paragraph12">success</p>
+        </div>
+      </div>
+    </div>
+    <div class="main-div10">
+      <img class="heading5" src="./images/img8.webp" alt="">
+      <div>
+        <h1 class="heading5">A great team behinde you:</h1>
+        <h1>skilledscore's path to sucess</h1>
+        <p class="paragraph13">skilledscore is your key to improving employment prospect </p>
+        <p>future prepation, and ILO level. you will be well prepared to</p>
+        <p>succeed in the global job market by using our specialized test,</p>
+        <p>skills development materials, and career  guidance counselor</p>
+        <p>setting a basis for a fruitful and satisfying professional journey</p>
+        <img class="img10" src="./images/img9.png" alt="">
+        <p>future readiness</p>
+        <p>skilledscore equips you with</p>
+        <p>the skills and guidance</p>
+        <p>needed to thrive in an ever-</p>
+        <p>changing job market, ensuring</p>
+        <p>you are prepare for tha</p>
+        <p>challenge and oppurtunities</p>
+        <p>for the future</p>
+        <img class="img10" src="./images/img10.png" alt="">
+        <p>skills readiness</p>
+        <p>skilledscore empowered yo to</p>
+        <p>boost your skills, alining</p>
+        <p>them with job market</p>
+        <p>demand to position you as a</p>
+        <p>top candiates for your dream</p>
+        <p>career</p>
+        <button>Get sarted with your skilledscore</button>
+      </div>
+    </div>
   </main>
+
 </body>
 
 </html>
