--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <p class="paragraph13">skilledscore is your key to improving employment prospect </p>
         <p>future prepation, and ILO level. you will be well prepared to</p>
         <p>succeed in the global job market by using our specialized test,</p>
-        <p>skills development materials, and career  guidance counselor</p>
+        <p>skills development materials, and career guidance counselor</p>
         <p>setting a basis for a fruitful and satisfying professional journey</p>
         <img class="img10" src="./images/img9.png" alt="">
         <p>future readiness</p>
@@ -187,11 +187,67 @@
         <p>demand to position you as a</p>
         <p>top candiates for your dream</p>
         <p>career</p>
-        <button>Get sarted with your skilledscore</button>
+        <button class="main-button">Get sarted with your skilledscore <img src="./images/button icon.png"
+            alt=""></button>
+      </div>
+    </div>
+    <div class="main-div11">
+      <div>
+        <h1>Job suggestions</h1>
+        <ul>
+          <li class="li-points">personalized jpb suggestion test: skilledscoreexamine your unique</li>
+          <p>abilities,qualification and professional objective to offer job</p>
+          <p>recomendations that align with your aims</p>
+          <li class="li-points">skills gap analysis: make sure you ae ready for the roles you are intrested</li>
+          <p>in by indentifying any skills gaps and reciving job recomendation that</p>
+          <p>help you close those gap</p>
+          <li class="li-points">optimize job search: to save time and efforrts and improve your chnaces</li>
+          <p>of descovering the perfect career oppourtunity use skillsscore's best</p>
+          <p>career aptitude test to accelelarate your job search</p>
+        </ul>
+      </div>
+      <img class="img11" src="./images/img11.png" alt="">
+    </div>
+    <div class="main-div11">
+      <img src="./images/img12.png" alt="">
+      <div>
+        <h1>Analize career path</h1>
+        <ul>
+          <li class="li-points">skill assessment tools: make well inform decision about your career</li>
+          <p>path by using skillscore extentive tools to obtain deep insight into</p>
+          <p>your areas of strenght and progress</p>
+          <li class="li-points">costumize recommendation: take advantage of specially design</li>
+          <p>employment and course recommendation that matches your intrest</p>
+          <p>talent and professional objective this way you can pursue</p>
+          <p>possibility that are a great fit</p>
+          <li class="li-points">continues growth: use skillsscore resources, a skills assessment</li>
+          <p>platforn to start a journey of professional advancement and skills</p>
+          <p>development that will provide you with the know-how and instrument</p>
+          <p>you need to succeed in your choosen sector</p>
+        </ul>
+      </div>
+    </div>
+    <div class="main-divlast">
+      <h1 class="heading6">Start your free trail</h1>
+      <h4 class="heading7">harness the power of product to enhanced career conversion,aquisition,and</h4>
+      <h4 class="heading7">retention</h4>
+      <input class="email2" type="email" placeholder="Enter your email">
+      <BUTton class="BUTTON2">TRY FOR FREE</BUTton>
+      <div class="subdiv-last">
+        <div>
+          <img  src="./images/aerow3.png" alt="">
+        </div>
+        <p class="lastp">free trial</p>
+        <div>
+          <img src="./images/aerow4.png" alt="">
+        </div>
+        <p class="lastp">no credit card requried</p>
+        <div><img src="./images/aerow5.png" alt=""></div>
+        <p class="lastp">upgrade anytime</p>
       </div>
     </div>
   </main>
-
+  <footer></footer>
 </body>
 
 </html>
