--- a/index.html
+++ b/index.html
@@ -247,7 +247,40 @@
       </div>
     </div>
   </main>
-  <footer></footer>
+  <footer class="footer-main">
+<div class="footer-div1">
+<div>
+  <img class="footer-img footer-heading" src="./images/footer img.png" alt="">
+  <h3 class="footer-heading">our adress</h3>
+  <h3 class="footer-heading">3577 harlem road</h3>
+  <h3 class="footer-heading">buffelo ny,14225</h3>
+  <h3 class="footer-heading">talk to us:</h3>
+  <h3 class="footer-heading">feedback@skilledscore.com</h3>
+</div>
+<div>
+  <h3 class="footer-heading footer-img">home</h3>
+  <a class="footer-links" href="benifit">benifit</a>
+  <a class="footer-links" href="how to use">how to use</a>
+  <a class="footer-links" href="pricing">pricing</a>
+</div>
+<div>
+<h3 class="footer-heading footer-img">information</h3>
+<a class="footer-links" href="privacy policy">privacy police</a>
+<a class="footer-links" href="terms">terms and condition</a>
+<a class="footer-links" href="cookiepolicy">cookie policy</a>
+</div>
+</div>
+<div class="hr"></div>
+<div class="footer-div2">
+  <p class="plast">@ 2024 skilledscore</p>
+  <div>
+  <button class="footer-button">f</button>
+  <button class="footer-button">x</button>
+  <button class="footer-button">x</button>
+  <button class="footer-button footer-button2">in</button>
+  </div>
+</div>
+  </footer>
 </body>
 
 </html>
